<resources>
    <string name="app_name">GOGOPic</string>
    <string name="text_login_terms">登录即代表阅读并同意服务条款</string>
    <string name="text_login_account">账号</string>
    <string name="text_login_password">密码</string>
    <string name="text_login">登陆</string>
    <string name="text_appname">GOGOPic</string>
    <string name="text_home">主页</string>
    <string name="text_mine">我的</string>
    <string name="text_network_error_tips">网络错误,点击重试!</string>
    <string name="electricity">电量:</string>
    <string name="lastEpisode">上一话</string>
    <string name="menu">菜单</string>
    <string name="nextEpisode">下一话</string>
    <string name="pagination">/</string>
    <string name="directory">目录</string>
    <string name="download">下载</string>
    <string name="collect">收藏</string>
    <string name="favorite">喜欢</string>
    <string name="netflow">分流</string>
    <string name="text_select_page">选择页数</string>
    <string name="text_post_comment">发表评论</string>
    <string name="text_before_comment">上一页</string>
    <string name="text_next_comment">下一页</string>
    <string name="text_empty">内容为空！</string>
    <string name="text_goto_page">跳转评论页</string>
</resources>