<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/text_appname"
            android:textSize="28sp" />


        <EditText
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/et_pwd"
            android:textColorHighlight="@color/black"
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:hint="@string/text_login_account"
            android:lines="1"
            android:textColor="@color/black" />

        <EditText
            android:imeOptions="actionDone"
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_login_password"
            android:lines="1"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/bt_login"
            android:backgroundTint="@color/blue_sky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/text_login_terms"
        android:textColor="#CCCFCF"
        android:textSize="20sp" />

</RelativeLayout>
