<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_comics_comment_container"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/bt_comics_launch_commnet"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_post_comment"/>

    <TextView
        android:id="@+id/tv_comics_comment_pages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comics_comment_content_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:id="@+id/bt_comics_before_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/text_before_comment"
            android:visibility="gone"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_weight="1"
            android:id="@+id/bt_comics_next_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_next_comment"
            android:visibility="gone"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>



</LinearLayout>